clase34 mis amigos estaban empedos

--- a/public/principal.html
+++ b/public/principal.html
@@ -18,10 +18,10 @@
 	<form method="POST" id="formuChat">
 		<input type="email" name="email" placeholder="email" id="email" required disabled>
 		<input type="text" name="nombre" placeholder="nombre" required>
-		<input type="text" name="apellido" placeholder="apellido" required>
+		<!-- <input type="text" name="apellido" placeholder="apellido" required>
 		<input type="number" name="edad" placeholder="edad" required>
 		<input type="text" name="alias" placeholder="alias" required>
-		<input type="text" name="avatar" placeholder="avatar" required>
+		<input type="text" name="avatar" placeholder="avatar" required> -->
 		<input type="text" name="mensaje" placeholder="ingrese su mensaje">
 		<input type="submit" value="enviar">
 	</form>
